[package]
name = "hyperliquid"
version = "0.2.3"
edition = "2021"
license = "MIT"
authors = ["Dennoh Peter <mail@dennohpeter.com>"]
description = "A Rust library for the Hyperliquid API"
homepage = "https://hyperliquid.xyz/"
categories = ["api-bindings", "cryptography::cryptocurrencies", "finance"]
repository = "https://github.com/dennohpeter/hyperliquid"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0.13", features = ["eip712"] }
futures-util = "0.3.28"
reqwest = { version = "0.11.20", features = ["json"] }
rmp-serde = "1.1.2"
serde = "1.0.188"
serde_json = "1.0.107"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.21.0", features = ["rustls"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
